<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">       U of M Group Finder</string>
    <string name="mainMenuText">Main Menu</string>
    <string name="findGroupsButtonText">Find Groups</string>
    <string name="findEventsButtonText">Find Events</string>
    <string name="subscriptionsButtonText">Subscriptions</string>
    <string name="manageGroupsButtonText">Manage Groups</string>
    <string name="settingsButtonText">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="test">TEST</string>
    <string name="eventText">A test</string>
    <string name="title_activity_results">FILLER TEXT</string>
    <string name="main_no_items">No groups to display</string>
    <string name="groupName">ACM</string>
    <string name="groupDescription">Description: Student group for students interested in technology</string>
    <string name="groupCategory">Category: Technology</string>
    <string name="upComingEvents">Upcoming Event: Hackathon</string>
    <string name="SubscribeText">Subscribe</string>

    <color name="lightGray">#bdbdbd</color>
    <color name="grayShadow">#7e7e7e</color>
    <color name="maroon">#800000</color>
    <color name="gold">#ffe6c582</color>
    <color name="maroonShadow">#400000</color>
    <color name="darkgold">#ffc2a262</color>
    <color name="goldShadow">#ff816c41</color>
    <color name="white">#ffffff</color>
    <color name="black">#000000</color>

    <string name="title_activity_event">EventActivity</string>
    <string name="managementTitle">Manage Groups</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_management">ManagementActivity</string>
    <string name="searchPrompt">Enter keywords</string>

    <string-array name="group_arrays">
        <item>Please select Category</item>
        <item>Sports</item>
        <item>Art</item>
        <item>Writing</item>
        <item>Tech</item>
    </string-array>

    <string name="group_prompt">Select Category</string>

    <string-array name="event_arrays">
        <item>Please select Category</item>
        <item>Info Session</item>
        <item>Food</item>
        <item>Party</item>
        <item>Workshop</item>
    </string-array>
    <string-array name="catagory_arrays">
        <item>Any</item>
        <item>Computer</item>
        <item>Educational</item>
        <item>Language</item>
        <item>Professional</item>
        <item>Other</item>
        <item>Recreational</item>
        <item>Sports</item>
    </string-array>

    <string name="event_prompt">--All Categories--</string>
    <string name="title_activity_result">Result</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search_results">MainActivity</string>
    <string name="title_activity_results_group">ResultsGroup</string>
    <string name="title_activity_new_group">NewGroupActivity</string>
    <string name="NewGroupTitle">Create a Group</string>
    <string name="title_activity_subscription">Subscriptions</string>
    <string name="title_activity_new_event">NewEventActivity</string><string name="NewEventTitle">Create an Event</string>

</resources>
